--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Champ-button {
+      background-color: grey;
+      margin: 10px;
+      font: inherit;
+      padding: 8px;
+      cursor: pointer;
+      box-shadow: 0 2px 3px #ccc;
+      }
