--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,15 +1,15 @@
 .Modal {
-    position: fixed;
     z-index: 500;
     background-color: white;
-    width: 70%;
+    width: 90%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
-    top: 50%;
+    margin-top: 80px;
+    margin-left: 15%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+    margin-bottom: 50px;
 }
 
 @media (min-width: 600px) {
