add skill table for all skills

--- a/src/components/ChampSelector/ChampSelector.css
+++ b/src/components/ChampSelector/ChampSelector.css
@@ -1,4 +1,9 @@
 
 .ChampSelector {
-  padding-right: 5px;
+  width: 50%;
+  height: 35px;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: #f1f1f1;
 }
