--- a/src/components/Champion/SkillTable/SkillTable.css
+++ b/src/components/Champion/SkillTable/SkillTable.css
@@ -20,3 +20,11 @@ table {
   border-collapse: collapse;
   margin-left: 25px;
 }
+
+.description {
+  display: table;
+  margin:auto;
+  border-bottom:1px dotted;
+  width: 200px;
+  font-size: 10px;
+}
